Actions
Bug #7527
closedsparc build failed after secflags integration (#7029)
Start date:
2016-11-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
+ /usr/gcc/4.4/bin/gcc -fident -finline -fno-inline-functions -fno-builtin -fno-asm -fdiagnostics- show-option -nodefaultlibs -mno-integer-ldd-std -D__sun -fno-strict-aliasing -fno-unit-at-a-time - fno-optimize-sibling-calls -O2 -m32 -Wall -Wextra -Werror -Wno-missing-braces -Wno-sign-compare -W no-unknown-pragmas -Wno-unused-parameter -Wno-missing-field-initializers -Wno-array-bounds -Wno-ty pe-limits -Wno-parentheses -Wno-unused-value -Wno-unused-but-set-variable -Wno-uninitialized -std= gnu99 -fno-inline-small-functions -fno-inline-functions-called-once -fno-ipa-cp -DDEBUG -gdwarf-2 -std=gnu99 -I. -I../common -I../../include -I../../include/sparc -I../../../../lib/libc/inc -I../. ./../../uts/sparc/sys -D_TS_ERRNO -I/ws/builds/igork/dg-orig/proto/root_sparc/usr/include -I/ws/bu ilds/igork/dg-orig/usr/src/common/elfcap -c -o gen_layout_obj.o ../common/gen_layout_obj.c -mcpu=v 8 -mno-v8plus /ws/builds/igork/dg-orig/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/ctfconvert-altexec -i -L VERSIONCTF gen_layout_obj.o /usr/bin/gsed -e '/^#include <struct_layout.h>/q' \ ../common/struct_layout_sparc.c | /usr/bin/gsed -e '$d' \ > struct_layout_sparc.tmp ./gen_struct_layout gen_layout_obj.o sparc \ >> struct_layout_sparc.tmp --- struct_layout_sparc.tmp 2016-11-01 19:23:07.381007482 +0300 +++ ../common/struct_layout_sparc.c 2016-11-01 17:58:51.621316429 +0300 @@ -377,12 +377,12 @@ static const sl_prsecflags_layout_t prsecflags_layout = { - { 0, 40, 0, 0 }, /* sizeof (prsecflags_t) */ - { 0, 4, 0, 0 }, /* pr_version */ - { 8, 8, 0, 0 }, /* pr_effective */ - { 16, 8, 0, 0 }, /* pr_inherit */ - { 24, 8, 0, 0 }, /* pr_lower */ - { 32, 8, 0, 0 }, /* pr_upper */ + { 0, 40, 0, 0 }, /* sizeof (prsecflags_t) */ + { 0, 4, 0, 0 }, /* pr_version */ + { 8, 8, 0, 0 }, /* pr_effective */ + { 16, 8, 0, 0 }, /* pr_inherit */ + { 24, 8, 0, 0 }, /* pr_lower */ + { 32, 8, 0, 0 }, /* pr_upper */ }; Error: struct_layout_sparc.c needs update! *** Error code 1 The following command caused the error: diff -u struct_layout_sparc.tmp \ ../common/struct_layout_sparc.c ||\ { echo "Error: struct_layout_sparc.c needs update!" ; exit 1; } dmake: Fatal error: Command failed for target `check_struct_layout' Current working directory /ws/builds/igork/dg-orig/usr/src/cmd/sgs/elfdump/sparc *** Error code 1 The following command caused the error: cd sparc; pwd; dmake install dmake: Fatal error: Command failed for target `sparc' Current working directory /ws/builds/igork/dg-orig/usr/src/cmd/sgs/elfdump *** Error code 1 dmake: Fatal error: Command failed for target `elfdump'
Updated by Electric Monk over 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 28b83f21b6f708fcc61937fcc89194e3e5e2b295
commit 28b83f21b6f708fcc61937fcc89194e3e5e2b295 Author: Olaf Bohlen <olbohlen@eenfach.de> Date: 2017-01-10T23:05:47.000Z 7527 elfdump: sparc build failed after secflags integration Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions