7527 elfdump: sparc build failed after secflags integration Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Robert Mustacchi <rm@joyent.com>